# BERT-game-support-ai-bot

./: README.md  gemma_rewrite_prompt.md  pyproject.toml  requirements.txt  server.py  start.bat
artifacts/tr_bert_uncased_epoch9/: label_mapping.json  metadata.json
artifacts/tr_bert_uncased_epoch9/bert_model/: config.json  tokenizer.json  tokenizer_config.json
docs/: MODEL_CARD.md  PROJECT_DOCUMENTATION.md
scripts/: run_api.py  train_model.py  tune_local_grid.py
src/support_bot/: __init__.py  api.py  config.py  dataset_rewriter.py  ollama_client.py  prompts.py  rewrite_service.py  training.py
supportbot_web/: __init__.py  config.py  feedback_dataset.py  http_handler.py  jobs.py  predictor_service.py  reply_templates.py  rewriter_service.py  uploads.py
web/: app.jsx  index.html  styles.css
